# store_diplom

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
data/db/: postmaster.pid
data/db/base/1/: 1259  2619  pg_internal.init
data/db/base/16384/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16419  16425  16432  16433  16447  16457  16459  16463  16465  16472  16484  16500  16506  16521  16522  16525  16527  16528  16531  16533  16534  16540  (+59 more)
data/db/base/5/: pg_internal.init
data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db/pg_multixact/members/: 0000
data/db/pg_subtrans/: 0000
main/: urls.py  views.py
main/templates/main/: base.html
main/templates/main/includes/: head.html  nav.html
posts/: forms.py  tests.py
posts/migrations/: 0001_initial.py  0002_initial.py
subscriptions/: services.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_initial.py
users/: forms.py  tests.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
