[tool.poetry]
name = "store_diplom"
version = "0.1.0"
description = ""
authors = ["Sergey Smetannikov <tanzhor4@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.5"
python-dotenv = "^1.0.0"
pillow = "^10.0.1"
requests = "^2.31.0"
redis = "^5.0.0"
celery = "^5.3.4"
psycopg2-binary = "^2.9.9"
django-celery-beat = "^2.5.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"